--- a/src/components/Input/SelectInput.module.css
+++ b/src/components/Input/SelectInput.module.css
@@ -2,9 +2,9 @@
   display: flex;
   width: clamp(200px, 30vw, 300px);
   justify-content: space-between;
-  font-size: clamp(12px, 2.3vmin, 18px);
+  font-size: clamp(12px, 1.9vmin, 18px);
   border-radius: 0;
-  background-color: white;
+  background-color: #f0f0f0;
   border: 1px rgb(231, 231, 231) solid;
   border-radius: 4px;
   transition: 0.2s;
