--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,12 @@
 .wrapper {
   position: fixed;
   display: flex;
-  left: 5px;
-  right: 5px;
+  top: 0;
+  width: 100%;
   height: 50px;
-  border-radius: 10px;
   background-color: rgb(211, 211, 211);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  z-index: 5;
+  z-index: 3;
 }
 
 .navButton {
@@ -17,6 +16,12 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+}
+
+@media (min-width: 1000px) {
+  .navButton {
+    display: none;
+  }
 }
 
 .bar1,
@@ -43,25 +48,30 @@
 
 .sidebar {
   padding-left: 20px;
-  min-height: 90vh;
-  top: 5px;
-  position: relative;
+  min-height: 50vh;
+  top: 55px;
   left: 5px;
-  min-width: 350px;
+  position: fixed;
+  min-width: 330px;
   border-radius: 10px;
   background-color: rgb(211, 211, 211);
+  z-index: 3;
+  overflow: hidden;
 }
 
 .dropContainer {
   position: absolute;
   padding-left: 20px;
-  min-width: 350px;
+  top: 55px;
+  left: 5px;
+  min-width: 330px;
   z-index: 5;
-  background-color: rgba(236, 236, 236, 0.4);
+  background-color: rgba(211, 211, 211, 0.5);
+  border-radius: 10px;
   transition: 0.3s;
   animation: zet 0.3s 1 both;
   overflow: hidden;
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(10px);
 }
 
 @keyframes zet {
