--- a/src/components/MainContent/MainContent.module.css
+++ b/src/components/MainContent/MainContent.module.css
@@ -8,9 +8,16 @@ h1 {
   margin-bottom: 20px;
 }
 
+.imageBox {
+  padding: 10px;
+  margin: 0 auto;
+  max-width: 500px;
+  min-width: 250px;
+}
+
 .image {
-  max-width: 95%;
-  min-width: 300px;
+  width: 100%;
+  height: 100%;
 }
 
 .initialData {
