--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
   top: 0;
   width: 100%;
   height: 50px;
+  border-bottom: 1px rgb(150, 150, 150) solid;
   background-color: rgb(211, 211, 211);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   z-index: 3;
@@ -48,8 +49,8 @@
 }
 
 .sidebar {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
   min-height: 50vh;
   top: 55px;
   left: 5px;
@@ -59,22 +60,24 @@
   background-color: rgb(211, 211, 211);
   z-index: 3;
   overflow: hidden;
+  border: 1px rgb(150, 150, 150) solid;
 }
 
 .dropContainer {
   position: absolute;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
   top: 55px;
   left: 5px;
   min-width: 250px;
   z-index: 5;
-  background-color: rgba(211, 211, 211, 0.5);
+  background-color: rgba(214, 214, 214, 0.8);
   border-radius: 10px;
   transition: 0.3s;
   animation: zet 0.3s 1 both;
   overflow: hidden;
   backdrop-filter: blur(10px);
+  border: 1px rgb(150, 150, 150) solid;
 }
 
 @keyframes zet {
@@ -88,7 +91,12 @@
 
 .dropItem {
   font-size: clamp(18px, 3.5vmin, 22px);
-  padding: 10px;
+  padding: 5px;
+  margin: 6px;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .dropItem::after {
@@ -96,20 +104,26 @@
   position: relative;
   display: block;
   width: 100%;
-  height: 4px;
+  height: 1px;
   background-color: rgb(197, 197, 197);
-  border-radius: 2px;
+  translate: 0 10px;
 }
 
 a {
   text-decoration: none;
-  color: rgb(73, 73, 73);
+  color: rgb(0, 0, 0);
 }
 
-a:hover {
-  color: rgb(187, 23, 23);
+.dropItem:hover {
+  background-color: rgb(245, 245, 245);
 }
 
 .active {
   color: rgb(109, 16, 16);
+  font-weight: 700;
+}
+
+.icon {
+  width: 32px;
+  margin-right: 5px;
 }
