--- a/src/components/Input/SelectInput.module.css
+++ b/src/components/Input/SelectInput.module.css
@@ -4,8 +4,8 @@
   justify-content: space-between;
   font-size: clamp(12px, 1.9vmin, 18px);
   border-radius: 0;
-  background-color: #f0f0f0;
-  border: 1px rgb(231, 231, 231) solid;
+  background-color: rgb(211, 211, 211);
+  border: 1px rgb(224, 224, 224) solid;
   border-radius: 4px;
   transition: 0.2s;
   padding: 2px;
@@ -26,7 +26,7 @@
   width: clamp(200px, 30vw, 300px);
   height: auto;
   border: 1px rgb(168, 168, 168) solid;
-  background-color: white;
+  background-color: rgb(211, 211, 211);
   border-radius: 4px;
   transition: 0.3s;
   animation: det 0.3s 1;
@@ -57,7 +57,7 @@
 .dropBox button:hover,
 .dropBox button:focus {
   outline: none;
-  background-color: #a7a7a7;
+  background-color: rgb(245, 245, 245);
 }
 
 .bar span {
