--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   height: 50px;
-  border-bottom: 1px rgb(150, 150, 150) solid;
+  border: 1px rgb(150, 150, 150) solid;
   background-color: rgb(211, 211, 211);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   z-index: 3;
