--- a/src/components/MainContent/MainContent.module.css
+++ b/src/components/MainContent/MainContent.module.css
@@ -21,6 +21,19 @@ h1 {
   height: 100%;
 }
 
+.imageBolt {
+  position: relative;
+  display: block;
+  width: 250px;
+  margin: 0 auto;
+}
+
+@media (max-width: 1000px) {
+  .imageBolt {
+    width: 150px;
+  }
+}
+
 .initialData {
   position: relative;
   display: grid;
@@ -30,11 +43,6 @@ h1 {
 
 .textItem {
   padding-left: 5px;
-}
-
-.form {
-  line-height: 1;
-  font-size: clamp(14px, 3vmin, 20px);
 }
 
 .warningMsg {
@@ -48,4 +56,20 @@ h1 {
 .label {
   font-size: clamp(14px, 3vmin, 20px);
   margin-bottom: 10px;
+}
+
+.wip {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.matrixResult {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.matrixResult div {
+  flex-grow: 1;
 }
