--- a/src/components/Input/MatrixInput.module.css
+++ b/src/components/Input/MatrixInput.module.css
@@ -41,7 +41,7 @@ input::-webkit-inner-spin-button {
 
 .buttonBox {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-top: 5px;
 }
 
