--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 50px;
   border: 1px rgb(150, 150, 150) solid;
-  background-color: rgb(211, 211, 211);
+  background-color: rgb(197, 197, 197);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   z-index: 3;
 }
@@ -64,7 +64,8 @@
   position: fixed;
   min-width: 250px;
   border-radius: 10px;
-  background-color: rgb(211, 211, 211);
+  border: 1px rgb(150, 150, 150) solid;
+  background-color: rgb(197, 197, 197);
   z-index: 3;
   overflow: hidden;
   border: 1px rgb(150, 150, 150) solid;
@@ -79,11 +80,11 @@
   min-width: 250px;
   z-index: 5;
   background-color: rgba(214, 214, 214, 0.8);
+  backdrop-filter: blur(10px);
   border-radius: 10px;
   transition: 0.3s;
   animation: zet 0.3s 1 both;
   overflow: hidden;
-  backdrop-filter: blur(10px);
   border: 1px rgb(150, 150, 150) solid;
 }
 
