--- a/src/components/MainContent/MainContent.module.css
+++ b/src/components/MainContent/MainContent.module.css
@@ -77,3 +77,36 @@ h1 {
 .matrixResult div {
   flex-grow: 1;
 }
+
+.buttonSelectBox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 10px 0 20px 0;
+}
+
+.buttonSelect {
+  width: 85px;
+  height: 85px;
+  background-color: rgb(211, 211, 211);
+  transition: 0.2s;
+  border: 1px rgb(168, 168, 168) solid;
+  border-radius: 5px;
+  margin: 5px;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.buttonSelectActive {
+  scale: 1.1;
+  background-color: rgb(171, 176, 204);
+}
+
+.buttonSelect img {
+  width: 100%;
+  height: 100%;
+}
+
+.buttonSelect:hover {
+  scale: 1.1;
+}
