--- a/src/components/MainContent/MainContent.module.css
+++ b/src/components/MainContent/MainContent.module.css
@@ -97,8 +97,12 @@ h1 {
   overflow: hidden;
 }
 
+.buttonBeamTypeSelect {
+  width: 170px;
+  height: 85px;
+}
+
 .buttonSelectActive {
-  scale: 1.1;
   background-color: rgb(171, 176, 204);
 }
 
