--- a/src/components/MainContent/MainContent.module.css
+++ b/src/components/MainContent/MainContent.module.css
@@ -102,6 +102,11 @@ h1 {
   height: 85px;
 }
 
+.buttonLengthFactorSelect {
+  width: 85px;
+  height: 170px;
+}
+
 .buttonSelectActive {
   background-color: rgb(171, 176, 204);
 }
