--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,10 +11,11 @@
 }
 
 .title {
-  font-size: 26px;
+  font-size: clamp(20px, 6vmin, 26px);
   font-weight: 700;
-  line-height: 1.9;
+  line-height: 0.8;
   margin-left: 20px;
+  padding-top: 15px;
 }
 
 .navButton {
@@ -131,7 +132,13 @@ a {
   font-weight: 700;
 }
 
-.icon {
+.iconBox {
   width: 32px;
+  height: 32px;
   margin-right: 5px;
+}
+
+.icon {
+  width: 100%;
+  height: 100%;
 }
