--- a/src/components/MainContent/BoltGroup/BoltGroup.module.css
+++ b/src/components/MainContent/BoltGroup/BoltGroup.module.css
@@ -45,6 +45,7 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  font-size: clamp(22px, 4vmin, 30px);
 }
 
 .matrixResult div {
