--- a/src/components/MainContent/Spring/Spring.module.css
+++ b/src/components/MainContent/Spring/Spring.module.css
@@ -26,14 +26,13 @@ h2 {
   flex-wrap: wrap;
   justify-content: center;
   margin: 10px 0 20px 0;
+  gap: 10px;
 }
 
 .buttonSelect {
   width: 170px;
   height: 110px;
-  background-color: rgb(211, 211, 211);
   transition: 0.2s;
-  border: 1px rgb(168, 168, 168) solid;
   border-radius: 5px;
   margin: 5px;
   cursor: pointer;
@@ -55,6 +54,7 @@ h2 {
 
 .buttonSelect:hover {
   scale: 1.1;
+  background-color: rgb(211, 211, 211);
 }
 
 .spring {
