--- a/src/components/Units/Units.module.css
+++ b/src/components/Units/Units.module.css
@@ -1,8 +1,8 @@
 .wrapper {
   display: inline-block;
-  font-family: "Times New Roman", Times, serif;
-  font-style: italic;
+  font-family: monospace;
   font-size: clamp(12px, 2.3vmin, 18px);
+  font-style: normal;
 }
 
 .mainUnit {
@@ -18,21 +18,17 @@
   position: absolute;
   border: 1px gray solid;
   border-radius: 5px;
-  /* translate: 15px 0px; */
   display: block;
   background-color: rgba(209, 209, 209, 0.4);
-  transition: 0.3s;
+  z-index: 99;
   backdrop-filter: blur(8px);
 }
 
-.dropBoxHidden {
-  border: none;
-  translate: 0 0;
-}
-
 .dropItem {
+  font-family: monospace;
   color: rgb(0, 0, 0);
   cursor: default;
+  font-weight: bold;
   padding: 5px 10px;
   margin: 3px 3px;
   text-align: center;
