--- a/src/components/MainContent/BoltGroup/BoltGroup.module.css
+++ b/src/components/MainContent/BoltGroup/BoltGroup.module.css
@@ -48,6 +48,10 @@ h1 {
   font-size: clamp(22px, 4vmin, 30px);
 }
 
+h2 {
+  font-size: clamp(20px, 2.7vmin, 24px);
+}
+
 .matrixResult div {
   flex-grow: 1;
 }
