--- a/src/components/MainContent/Tolerances/Tolerances.module.css
+++ b/src/components/MainContent/Tolerances/Tolerances.module.css
@@ -11,3 +11,16 @@
   grid-template-columns: 5fr 3fr;
   padding: 3px 2px 10px 2px;
 }
+
+.wrongRange {
+  color: red;
+  font-weight: bold;
+  margin-bottom: 20px;
+  font-size: clamp(12px, 2.3vmin, 18px);
+}
+
+.result {
+  color: brown;
+  font-size: clamp(12px, 2.3vmin, 18px);
+  font-weight: bold;
+}
